pretty print JSON

--- a/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
+++ b/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
@@ -1651,7 +1651,7 @@
                             <constraints/>
                             <properties>
                               <autoscrolls value="false"/>
-                              <editable value="false"/>
+                              <editable value="true"/>
                               <lineWrap value="true"/>
                             </properties>
                           </component>
