--- a/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
+++ b/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="514" height="3254"/>
+      <xy x="20" y="20" width="615" height="3254"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -1647,7 +1647,7 @@
                           </scrollpane>
                         </children>
                       </grid>
-                      <grid id="e9526" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="e9526" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <splitpane position="right"/>
@@ -1657,7 +1657,7 @@
                         <children>
                           <scrollpane id="b0c51">
                             <constraints>
-                              <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties/>
                             <border type="none"/>
@@ -1682,7 +1682,7 @@
                           </component>
                           <hspacer id="243ae">
                             <constraints>
-                              <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                           </hspacer>
                           <component id="21c9d" class="javax.swing.JLabel">
@@ -1698,6 +1698,14 @@
                               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                           </hspacer>
+                          <component id="74e71" class="javax.swing.JButton" binding="changeOrientationButton">
+                            <constraints>
+                              <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Change orientation"/>
+                            </properties>
+                          </component>
                         </children>
                       </grid>
                     </children>
