--- a/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
+++ b/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
@@ -1576,7 +1576,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="e2f7d" binding="jsonStringPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e2f7d" binding="jsonStringPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1591,7 +1591,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <splitpane id="a0b20">
+                  <splitpane id="a0b20" binding="jsonStringSplitPane">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="200"/>
@@ -1599,9 +1599,10 @@
                       <gridbag weightx="1.0" weighty="1.0"/>
                     </constraints>
                     <properties>
-                      <dividerLocation value="-1"/>
+                      <dividerLocation value="0.5"/>
                       <dividerSize value="5"/>
                       <enabled value="true"/>
+                      <lastDividerLocation value="0.5"/>
                       <oneTouchExpandable value="false"/>
                       <orientation value="0"/>
                       <resizeWeight value="0.5"/>
@@ -1647,7 +1648,7 @@
                           </scrollpane>
                         </children>
                       </grid>
-                      <grid id="e9526" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="e9526" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <splitpane position="right"/>
@@ -1685,31 +1686,41 @@
                               <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                           </hspacer>
-                          <component id="21c9d" class="javax.swing.JLabel">
-                            <constraints>
-                              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                            </constraints>
-                            <properties>
-                              <text value="&lt;html&gt;&lt;b&gt;Warning&lt;/b&gt;: please don't paste untrusted JSON content. DevToys&lt;br&gt;uses Jackson parsers, and they may have vulnerabilities.&lt;/html&gt;"/>
-                            </properties>
-                          </component>
-                          <hspacer id="c917a">
-                            <constraints>
-                              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                            </constraints>
-                          </hspacer>
-                          <component id="74e71" class="javax.swing.JButton" binding="changeOrientationButton">
-                            <constraints>
-                              <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                            </constraints>
-                            <properties>
-                              <text value="Change orientation"/>
-                            </properties>
-                          </component>
                         </children>
                       </grid>
                     </children>
                   </splitpane>
+                </children>
+              </grid>
+              <grid id="4aa32" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="21c9d" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="&lt;html&gt;&lt;b&gt;Warning&lt;/b&gt;: please don't paste untrusted JSON content. DevToys&lt;br&gt;uses Jackson parsers, and they may have vulnerabilities.&lt;/html&gt;"/>
+                    </properties>
+                  </component>
+                  <hspacer id="c917a">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                  <component id="74e71" class="javax.swing.JButton" binding="changeOrientationButton">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Change orientation"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
             </children>
