--- a/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
+++ b/src/main/java/lermitage/intellij/ilovedevtoys/toolwindow/DevToysToolWindow.form
@@ -1609,7 +1609,7 @@
                     </properties>
                     <border type="none"/>
                     <children>
-                      <grid id="a0363" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="a0363" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <splitpane position="left"/>
@@ -1625,14 +1625,9 @@
                               <text value="JSON:"/>
                             </properties>
                           </component>
-                          <hspacer id="b8ac">
-                            <constraints>
-                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                            </constraints>
-                          </hspacer>
                           <scrollpane id="d378e">
                             <constraints>
-                              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties/>
                             <border type="none"/>
@@ -1646,6 +1641,19 @@
                               </component>
                             </children>
                           </scrollpane>
+                          <component id="29398" class="com.intellij.ui.SearchTextField" binding="jsonSearchField">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <visible value="true"/>
+                            </properties>
+                          </component>
+                          <hspacer id="7b495">
+                            <constraints>
+                              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                          </hspacer>
                         </children>
                       </grid>
                       <grid id="e9526" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
